<resources>
    <string name="app_name">Firefds Kit [Pie]</string>
    <string name="samsung_rom_warning">Samsung ROM required</string>
    <string name="samsung_rom_warning_msg">Your ROM doesn\'t seem to be a Samsung ROM\nThis application doesn\'t support CM or AOSP ROMs.</string>
    <string name="disable_loud_volume_enabled">Loud volume warning is enabled</string>
    <string name="disable_loud_volume_disabled">Loud volume warning is disabled (listening at loud volumes may damage your ears, use caution)</string>
    <string name="disable_loud_volume">Disable loud volume warning</string>
    <string name="statusbar">Notifications Panel</string>
    <string name="system">System</string>
    <string name="reboot">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_download">Download</string>
    <string name="quick_settings">Quick settings</string>
    <string name="soundAndRecording">Sound &amp; Recording</string>
    <string name="sound">Sound</string>
    <string name="recording">Recording (Requires Samsung Capture 3.0.0 and above)</string>
    <string name="security">Security Hacks</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="messaging">Messaging</string>
    <string name="apply">Apply</string>
    <string name="mms_sms_mms_conversion_on">Conversion disabled</string>
    <string name="mms_sms_mms_conversion_off">Current conversion threshold: 4 (default)</string>
    <string name="mms_sms_mms_conversion">Disable SMS to MMS threshold</string>
    <string name="quick_reboot">Quick Restart</string>
    <string name="reboot_required">Please reboot to apply changes.</string>
    <string name="reboot_required_title">Reboot requested</string>
    <string name="reboot_required_message">Firefds Kit requires a reboot to apply changes</string>
    <string name="rebooting">Rebooting now…</string>
    <string name="credit_details">\nThanks to Rovo89 for creating Xposed framework.\n\nThanks to C3C076, RikkaW, solohsu, MlgmXyysd for their contribution on Xposed framework and modules.\n\nDeveloper: <a href="http://forum.xda-developers.com/member.php?u=3844620">Firefds firefds@Xda-Developers</a>\n\nBased on XTouchWiz by:\n\<a href="http://forum.xda-developers.com/member.php?u=3562083">Wanam @Xda-Developers</a></string>
    <string name="restore">Restore a backup</string>
    <string name="save">Save a backup</string>
    <string name="backup_name">Backup name</string>
    <string name="save_successful">Save successful</string>
    <string name="save_unsuccessful">Save unsuccessful</string>
    <string name="delete">Delete</string>
    <string name="no_backups">No backups</string>
    <string name="defaults_restored">Defaults restored</string>
    <string name="defaults">Default stock</string>
    <string name="backup_restored">Backup restored</string>
    <string name="bypass_exchange_security">Bypass exchange security</string>
    <string name="bypass_exchange_security_on">Exchange lock security disabled (You must setup your account after reboot)</string>
    <string name="bypass_exchange_security_off">Exchange lock security enabled</string>
    <string name="email">Email</string>
    <string name="enable_call_add">Enable Add call button</string>
    <string name="enable_call_add_on">Add call button enabled instead of Record button</string>
    <string name="enable_call_add_off">Call Record button enabled instead of Add call button</string>
    <string name="phone">Phone</string>
    <string name="ok_btn">OK</string>
    <string name="call_number_formatting_enabled">Call number formatting enabled</string>
    <string name="call_number_formatting_disabled">Call number formatting disabled</string>
    <string name="disable_call_number_formatting">Disable call number formatting</string>
    <string name="status_custom">Status set to Custom</string>
    <string name="status_official">Status set to Official</string>
    <string name="fake_system_status">Fake system status</string>
    <string name="call_recording_menu_disabled">Call recording menu disabled</string>
    <string name="call_recording_menu_enabled">Call recording menu enabled</string>
    <string name="enable_call_recording_menu">Enable call recording menu</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog">Disable bluetooth toggle popup</string>
    <string name="quick_settings_disable_bluetooth_scan_dialog_sum">Disable the scan dialog after enabling bluetooth</string>
    <string name="quick_settings_disable_sync_dialog">Disable sync toggle popup</string>
    <string name="quick_settings_disable_sync_dialog_sum">Disable the confirmation dialog when toggling sync</string>
    <string name="camera_and_gallery">Camera and Gallery</string>
    <string name="recommended_settings">Recommended settings</string>
    <string name="set_recommended_settings">Apply recommended settings?</string>
    <string name="nfc_behavior">NFC Behavior</string>
    <string name="disable_volume_control_sound">Disable volume control sound</string>
    <string name="disable_volume_control_sound_while_changing_sounds">Disable volume control sound while changing sounds volume</string>
    <string name="disable_low_battery_sound">Disable low battery sound</string>
    <string name="force_mms_connect">Force MMS connect</string>
    <string name="force_mms_connect_to_receive_mms">Force MMS connect, to receive MMS without manually enabling mobile data</string>
    <string name="disable_temperature_checks">Disable Temperature checks</string>
    <string name="disable_temperature_warnings_on_the_recording">Disable temperature warnings on the recording and flash use. Use it only if you need it!</string>
    <string name="call_recording">Call recording</string>
    <string name="call_recording_summary">Enable call recording and call recording settings in Phone settings</string>
    <string name="screenshot">Screenshot</string>
    <string name="add_screenshot_to_power_menu">Enable Screenshot in power menu</string>
    <string name="advanced_power_menu_title">Advanced Power Menu</string>
    <string name="advanced_power_menu">Power menu</string>
    <string name="hide_mtp_notification">Auto MTP</string>
    <string name="hide_mtp_notification_off">Manually allow or deny MTP access</string>
    <string name="hide_mtp_notification_on">Auto allows MTP and hides the notification</string>
    <string name="screen_timeout_title">Screen Timeout Settings</string>
    <string name="screen_timeout_seconds">Screen Timeout Seconds</string>
    <string name="screen_timeout_minutes">Screen Timeout Minutes</string>
    <string name="screen_timeout_hours">Screen Timeout Hours</string>
    <string name="enable_camera_shutter_menu">Enable Shutter Sound Menu</string>
    <string name="enable_camera_shutter_menu_summary">Enable shutter sound menu in camera app</string>
    <string name="enable_data_mode_switch_summary">Enable Data Mode switch in power menu</string>
    <string name="enable_data_mode_switch_title">Data Mode Switch</string>
    <string name="advanced_power_menu_summary">Adds additional options to power menu</string>
    <string name="screen_unlock">Screen Unlock</string>
    <string name="enable_fingerprint_unlock_summary">Enable fingerprint unlock on reboot</string>
    <string name="enable_fingerprint_unlock_title">Fingerprint Unlock on Reboot</string>
    <string name="enable_biometrics_unlock_summary">Enable biometrics unlock on reboot</string>
    <string name="enable_biometrics_unlock_title">Enable Biometrics Unlock on Reboot</string>
    <string name="reboot_confirm_recovery">Reboot to Recovery mode</string>
    <string name="allow_multi_user_summary">Enable multi user support</string>
    <string name="allow_multi_user_title">Multi User Support</string>
    <string name="max_supported_users_title">Max users</string>
    <string name="multiUser">Multi User</string>
    <string name="navigation_bar_color_title">Navigation Bar Custom Color</string>
    <string name="navigation_bar_color_summary">Custom color of the navigation bar</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="color_dialog_title">Select a Color</string>
    <string name="restartUI">Restart SystemUI</string>
    <string name="add_restart_ui_to_power_menu">Enable Restart SystemUI in power menu</string>
    <string name="power_menu_options_title">Power Menu Options</string>
    <string name="power_menu_options_summary">Select power menu options</string>
    <string name="enable_power_off_summary">Enable Power Off in power menu</string>
    <string name="enable_power_off_title">Power Off</string>
    <string name="enable_restart_summary">Enable Restart in power menu</string>
    <string name="enable_restart_title">Restart</string>
    <string name="enable_recovery_summary">Enable Restart to Recovery mode in power menu</string>
    <string name="enable_recovery_title">Recovery Mode</string>
    <string name="enable_download_summary">Enable Restart to Download mode in power menu</string>
    <string name="enable_download_title">Download Mode</string>
    <string name="enable_emergency_summary">Enable Emergency Mode in power menu</string>
    <string name="enable_emergency_title">Emergency Mode</string>
    <string name="enable_flashlight_summary">Enable Flashlight in power menu</string>
    <string name="enable_flashlight_title">Flashlight</string>
    <string name="enable_screen_record_summary">Enable Screen Record in power menu (requires Samsung Screen Recorder installed)</string>
    <string name="enable_screen_record_title">Screen Recorder</string>
    <string name="disbale_restart_confirmation_summary">Disable restart confirmation</string>
    <string name="disbale_restart_confirmation_title">Disable Restart Confirmation</string>
    <string name="enable_blocked_phrases_summary">Enable block phrases in messages settings</string>
    <string name="enable_blocked_phrases_title">Enable Block Phrases</string>
    <string name="transition_effects">Transition Effects</string>
    <string name="transition_effect_title">Transition Effect Chooser</string>
    <string name="transition_effect_summary">Choose a transition effect</string>
    <string name="custom_recovery_title">Custom Recovery Mode Text</string>
    <string name="custom_recovery_confirmation_title">Custom Recovery Mode Confirmation Text</string>
    <string name="power_menu_options">Power Options</string>
    <string name="disable_power_menu_secure_lockscreen_title">Disable Power Menu On Lockscreen</string>
    <string name="disable_power_menu_secure_lockscreen_summary">Disable display of power menu when device is secure locked</string>
    <string name="default_reboot_behavior_title">Set Default Reboot Behavior to Recovery</string>
    <string name="default_reboot_behavior_summary">Set Default reboot behavior to reboot to Recovery. WARNING: DO NOT USE WITH CUSTOM KERNELS THAT MIMIC THIS BEHAVIOR!</string>
    <string name="enable_advanced_hotspot_options_title">Enable Advanced Hotspot Options</string>
    <string name="enable_advanced_hotspot_options_summary">Enable additional advanced hotspot settings options</string>
    <string name="unlock_keyguard_before_action_execute_summary">Perform restart or power off actions after unlocking secure keyguard</string>
    <string name="unlock_keyguard_before_action_execute_title">Unlock Keyguard Before Actions</string>
    <string name="enable_screen_record_in_call_summary">Enable screen recording while call is active</string>
    <string name="enable_screen_record_in_call_title">Enable Screen Recording In Call</string>
    <string name="enable_screen_record_tile_summary">Enable screen recorder tile and settings option</string>
    <string name="enable_screen_record_tile_title">Enable Screen Recording Tile</string>
    <string name="firefds_kit_settings">Firefds Kit Settings</string>
</resources>