<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:key="powerMenuKey"
        android:title="@string/advanced_power_menu"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableAdvancedPowerMenu"
            android:summary="@string/advanced_power_menu_summary"
            android:title="@string/advanced_power_menu_title"
            app:iconSpaceReserved="false" />
        <androidx.preference.PreferenceScreen
            android:dependency="enableAdvancedPowerMenu"
            android:key="powerMenuSettings"
            android:summary="@string/power_menu_options_summary"
            android:title="@string/power_menu_options_title"
            app:fragment="sb.firefds.pie.firefdskit.fragments.PowerMenuSettingsFragment"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disbaleRestartConfirmation"
            android:summary="@string/disbale_restart_confirmation_summary"
            android:title="@string/disbale_restart_confirmation_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disablePowerMenuSecureLockscreen"
            android:summary="@string/disable_power_menu_secure_lockscreen_summary"
            android:title="@string/disable_power_menu_secure_lockscreen_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="unlockKeyguardBeforeActionExecute"
            android:summary="@string/unlock_keyguard_before_action_execute_summary"
            android:title="@string/unlock_keyguard_before_action_execute_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="defaultRebootBehavior"
            android:summary="@string/default_reboot_behavior_summary"
            android:title="@string/default_reboot_behavior_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/navigation_bar"
        app:iconSpaceReserved="false">
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:key="navigationBarColor"
            android:summary="@string/navigation_bar_color_summary"
            android:title="@string/navigation_bar_color_title"
            app:cpv_dialogTitle="@string/color_dialog_title"
            app:cpv_dialogType="custom"
            app:cpv_showAlphaSlider="false"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/multiUser"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="supportsMultipleUsers"
            android:summary="@string/allow_multi_user_summary"
            android:title="@string/allow_multi_user_title"
            app:iconSpaceReserved="false" />
        <androidx.preference.SeekBarPreference
            android:defaultValue="3"
            android:dependency="supportsMultipleUsers"
            android:key="maxSupportedUsers"
            android:max="10"
            android:min="2"
            android:title="@string/max_supported_users_title"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/system"
        app:iconSpaceReserved="false">
        <androidx.preference.PreferenceScreen
            android:key="screenTimeoutSettings"
            android:title="@string/screen_timeout_title"
            app:fragment="sb.firefds.pie.firefdskit.fragments.ScreenTimeoutSettingsFragment"
            app:iconSpaceReserved="false" />
        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/nfc_behavior_entries"
            android:entryValues="@array/nfc_behavior_values"
            android:key="nfcBehavior"
            android:title="@string/nfc_behavior"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hideMTPNotification"
            android:summaryOff="@string/hide_mtp_notification_off"
            android:summaryOn="@string/hide_mtp_notification_on"
            android:title="@string/hide_mtp_notification"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableAdvancedHotspotOptions"
            android:summary="@string/enable_advanced_hotspot_options_summary"
            android:title="@string/enable_advanced_hotspot_options_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/camera_and_gallery"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableTemperatureChecks"
            android:summary="@string/disable_temperature_warnings_on_the_recording"
            android:title="@string/disable_temperature_checks"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableCameraShutterMenu"
            android:summary="@string/enable_camera_shutter_menu_summary"
            android:title="@string/enable_camera_shutter_menu"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>