<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="@string/power_menu_options"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enablePowerOff"
            android:summary="@string/enable_power_off_summary"
            android:title="@string/enable_power_off_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableRestart"
            android:summary="@string/enable_restart_summary"
            android:title="@string/enable_restart_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableRecovery"
            android:summary="@string/enable_recovery_summary"
            android:title="@string/enable_recovery_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableDownload"
            android:summary="@string/enable_download_summary"
            android:title="@string/enable_download_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableDataMode"
            android:summary="@string/enable_data_mode_switch_summary"
            android:title="@string/enable_data_mode_switch_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableScreenshot"
            android:summary="@string/add_screenshot_to_power_menu"
            android:title="@string/screenshot"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableScreenRecord"
            android:summary="@string/enable_screen_record_summary"
            android:title="@string/enable_screen_record_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableRestartSystemUI"
            android:summary="@string/add_restart_ui_to_power_menu"
            android:title="@string/restartUI"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableEmergencyMode"
            android:summary="@string/enable_emergency_summary"
            android:title="@string/enable_emergency_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableFlashlight"
            android:summary="@string/enable_flashlight_summary"
            android:title="@string/enable_flashlight_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/power_menu_options_custom_tweaks"
        app:iconSpaceReserved="false">
        <EditTextPreference
            android:defaultValue="@string/reboot_recovery"
            android:dependency="enableRecovery"
            android:key="customRecovery"
            android:title="@string/custom_recovery_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="@string/reboot_confirm_recovery"
            android:dependency="enableRecovery"
            android:key="customRecoveryConfirmation"
            android:title="@string/custom_recovery_confirmation_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="enableRecovery"
            android:key="replaceRecoveryIcon"
            android:summary="@string/replace_recovery_icon_summary"
            android:title="@string/replace_recovery_icon_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>