<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="@string/sound"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableLoudVolumeWarning"
            android:summaryOff="@string/disable_loud_volume_enabled"
            android:summaryOn="@string/disable_loud_volume_disabled"
            android:title="@string/disable_loud_volume"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableVolumeControlSound"
            android:summary="@string/disable_volume_control_sound_while_changing_sounds"
            android:title="@string/disable_volume_control_sound"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableLowBatterySound"
            android:summary="@string/disable_low_battery_sound"
            android:title="@string/disable_low_battery_sound"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/recording"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableScreenRecorderTile"
            android:summary="@string/enable_screen_record_tile_summary"
            android:title="@string/enable_screen_record_tile_title"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableScreenRecorderInCall"
            android:summary="@string/enable_screen_record_in_call_summary"
            android:title="@string/enable_screen_record_in_call_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>