<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:key="phoneKeyCat"
        android:title="@string/phone"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enableCallRecording"
            android:title="@string/call_recording"
            android:summary="@string/call_recording_summary"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="enableCallRecording"
            android:key="enableCallAdd"
            android:summaryOff="@string/enable_call_add_off"
            android:summaryOn="@string/enable_call_add_on"
            android:title="@string/enable_call_add"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="disableNumberFormatting"
            android:summaryOff="@string/call_number_formatting_enabled"
            android:summaryOn="@string/call_number_formatting_disabled"
            android:title="@string/disable_call_number_formatting"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>