<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:title="@string/transition_effects"
        app:iconSpaceReserved="false">
        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/transition_effect_entries"
            android:entryValues="@array/transition_effect_values"
            android:key="transitionEffect"
            android:summary="@string/transition_effect_summary"
            android:title="@string/transition_effect_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>