<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.SeekBarPreference
        android:key="screenTimeoutSeconds"
        android:max="59"
        android:min="0"
        android:title="@string/screen_timeout_seconds"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true" />
    <androidx.preference.SeekBarPreference
        android:key="screenTimeoutMinutes"
        android:max="59"
        android:min="0"
        android:title="@string/screen_timeout_minutes"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true" />
    <androidx.preference.SeekBarPreference
        android:key="screenTimeoutHours"
        android:max="24"
        android:min="0"
        android:title="@string/screen_timeout_hours"
        app:iconSpaceReserved="false"
        app:showSeekBarValue="true" />
</androidx.preference.PreferenceScreen>